💄 CreateRoadmap collapse fix, button tooltips

--- a/frontend/src/components/CreateTask/CreateTask.scss
+++ b/frontend/src/components/CreateTask/CreateTask.scss
@@ -13,6 +13,7 @@ $margin-bottom-main: 15px;
   flex-direction: column;
   align-items: flex-end;
   width: 100%;
+  min-height: 420px;
   padding: 40px;
   margin-bottom: $margin-bottom-main;
   border: $create-task-border-style;
@@ -29,9 +30,12 @@ $margin-bottom-main: 15px;
     flex-wrap: nowrap;
 
     .task-type-select {
+      .MuiInputBase-root {
+        min-height: 48px;
+      }
+
       .MuiSelect-selectMenu {
         min-width: 105px;
-        min-height: 25px;
         display: flex;
         flex-direction: row;
         justify-content: center;
